--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>
        Alterado para versão B
     </h1>
-    <h2>Altereado para versão b<\h2>
+    <h2>Altereado para versão b </h2>
 </body>
 </html>
